test/Tests/Optics/NoStructIndex.golden

test\Tests\Optics\NoStructIndex.hs:42:17: error:
    * Index 5 out of bounds when accessing structure with fields
      '[ "position" ':-> V 3 Float, "colour" ':-> V 4 Float,
         "size" ':-> Float, "weight" ':-> Float]
      Structure has only 4 fields.
      Note: indexing starts from 0.
    * In a stmt of a 'do' block:
        position <- use @(Name "vertexData" :.: Index 5)
      In the third argument of `entryPoint', namely
        `do position <- use @(Name "vertexData" :.: Index 5)
            #gl_Position .= position'
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do position <- use @(Name "vertexData" :.: Index 5)
             #gl_Position .= position
   |
42 |     position <- use @( Name "vertexData" :.: Index 5 )
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
